metadata/force-app/main/default/objects/CustomName_dgVAf__c/CustomName_dgVAf__c.object-meta.xml
<CustomObject>
    <description>Description_wbQJK</description>
    <label>CustomLabel_tFydE</label>
    <nameField>
        <label>CustomLabel_tFydE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_tFydEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>