metadata/force-app/main/default/objects/CustomName_dgVAf__c/fields/CustomField_AvpBr__c.field-meta.xml
<CustomField>
    <fullName>CustomField_AvpBr__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldHzJqC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>