metadata/force-app/main/default/objects/CustomName_dgVAf__c/fields/CustomField_rqZDx__c.field-meta.xml
<CustomField>
    <fullName>CustomField_rqZDx__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGQmOY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>