metadata/force-app/main/default/objects/CustomName_dgVAf__c/fields/CustomField_WTqPo__c.field-meta.xml
<CustomField>
    <fullName>CustomField_WTqPo__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldUzXDd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>